--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
 
-    <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
-    </script>
+    <script src='./renderer.js'></script>
   </body>
 </html>
